@@ -1,4 +1,4 @@
-requires 'Kelp' => '2.15';
+requires 'Kelp' => '2.16';
 requires 'Kelp::Module::YAML' => '2.00';
 requires 'Role::Tiny' => 0;
 
