@@ -1,0 +1,11 @@
+package CustomController;
+
+use Kelp::Base;
+
+attr context => undef;
+
+sub before_dispatch { }
+sub before_finalize { }
+
+1;
+
