@@ -1,6 +1,7 @@
 Revision history for Whelk
 
 {{$NEXT}}
+	- Framework no longer assumes that controller is a subclass of Kelp, allowing custom base controllers
 	- Added documentation for Whelk::Wrapper
 
 0.04 - 2024-07-06
